<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.profile.UserProfileUpdateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

<!--        <com.hbb20.CountryCodePicker-->
<!--            android:id="@+id/countryCodePicker"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingStart="8dp"-->
<!--            android:paddingEnd="4dp"-->
<!--            android:visibility="gone"-->
<!--            app:ccp_autoDetectCountry="true"-->
<!--            app:ccp_countryPreference="bd,in,my"-->
<!--            app:ccp_textSize="12dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"


                android:layout_margin="10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/title_update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:lines="1"
                android:text="Update profile"
                android:textColor="#FF2A2D36"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/update_profile_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp">


                    <com.myrobi.shadhinmusiclibrary.utils.CircleImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/my_bl_sdk_ic_artist"
                        app:civ_border_color="@android:color/transparent"
                        app:civ_border_width="0dp" />

                    <ImageButton
                        android:id="@+id/take_image"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="right|bottom"
                        android:background="?selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_camera_profile" />
                </FrameLayout>

                <EditText
                    android:id="@+id/et_name"
                    style="@style/profile_et_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_user_et"
                    android:ems="10"
                    android:hint="@string/full_name_sdf"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/profile_et_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_mail_profile"
                    android:ems="10"
                    android:hint="@string/email_n"
                    android:inputType="textEmailAddress"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_edittext_round"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/select_country"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:paddingStart="13dp"
                        android:paddingTop="13dp"
                        android:paddingEnd="2dp"
                        android:paddingBottom="13dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:src="@drawable/ic_call_profile" />






                    </LinearLayout>

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:background="@android:color/transparent"
                        android:hint ="Enter your mobile number"
                        android:fontFamily="@font/roboto"
                        android:gravity="center|left"
                        android:textColor="#FF2A2D36"
                        android:textColorHint="#FF939598"

                        android:textSize="16sp"
                        tools:text="8801776402271" />


                </LinearLayout>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/profile_et_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_lock_on_profile"
                    android:ems="10"
                    android:hint="@string/password_only"
                    android:inputType="textPassword"
                    android:visibility="gone"
                    tools:text="@string/password_only" />


                <TextView
                    android:id="@+id/select_birthday"
                    style="@style/profile_tv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:focusable="true"
                    android:gravity="left|center"
                    android:text="@string/choose_date_of_birth"
                    android:drawableEnd="@drawable/ic_chevron_right_profile"
                    android:drawableStart="@drawable/ic_calendar_profile"
                    tools:ignore="RtlHardcoded" />

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/i_am_a"
                        android:textColor="#FF2A2D36"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        style="@style/profile_radio_button_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/profile_radio_button_background"
                        android:button="@android:color/transparent"
                        android:drawableStart="@drawable/ic_gender_male_profile"
                        android:drawableEnd="@drawable/profile_radio_button_end_drawable"
                        android:drawablePadding="12dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        style="@style/profile_radio_button_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/profile_radio_button_background"
                        android:button="@android:color/transparent"
                        android:drawableStart="@drawable/ic_gender_female_profile"
                        android:drawableEnd="@drawable/profile_radio_button_end_drawable"
                        android:drawablePadding="12dp"
                        android:text="@string/female" />

                </RadioGroup>



            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/update_profile_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/my_bl_sdk_rounded_button_blue"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/usdfs_sdf"
             android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>