<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">


   <LinearLayout
        android:id="@+id/sub_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">


        <androidx.cardview.widget.CardView
            android:id="@+id/monthly_plan_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="#5AC8FA"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            tools:ignore="UnusedAttribute"
            tools:layout_marginTop="24dp"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/monthly_img"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:visibility="gone"
                    app:srcCompat="@drawable/my_bl_sdk_ic_plan_a"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/plan_a_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/monthly_img"
                    android:layout_marginStart="16dp"

                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="Monthly"
                    android:textColor="@color/my_sdk_white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/plan_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/plan_a_tv"
                    android:layout_marginStart="16dp"
                    android:text="30 days"
                    android:textColor="@color/my_sdk_white"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/plan_extra_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_a_tv"
                    tools:visibility="visible" />


                <TextView
                    android:id="@+id/plan_a_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/plan_duration"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="right"


                    android:textColor="@color/my_sdk_white"
                    android:textSize="20sp"

                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/plan_a_tv"
                    tools:layout_editor_absoluteY="16dp"
                    tools:text="100" />

                <View
                    android:id="@+id/margin_one"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_below="@+id/plan_a_price"
                    android:background="@color/my_sdk_white"
                    android:visibility="gone"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />


                <TextView
                    android:id="@+id/plan_a_expiration_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/description_text_color"
                    android:textSize="12sp"
                    android:visibility="visible"

                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/plan_extra_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="Your plan"
                    android:textColor="@color/my_sdk_white"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonMonthlyC"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_duration" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/buttonMonthlyC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plan_a_price">

                    <TextView
                        android:id="@+id/button_monthly"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:paddingStart="6dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="4dp"
                        android:text="Cancel"
                        android:textAllCaps="false"
                        android:textColor="#00B0FF"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:ignore="UnusedAttribute"
                        tools:layout_editor_absoluteX="16dp"
                        tools:visibility="visible" />
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/robiAirBtn"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/my_sdk_white"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/my_bl_sdk_ic_robi_charging" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/text_telco"
                    android:textColor="@color/my_sdk_v2_text_light"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center|right"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/my_bl_sdk_ic_vector_ba" />
                </FrameLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/whycard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/my_bl_sdk_area_png"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/why_upgrade_to_premium"
                android:textColor="#2A2D36"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_bl_sdk_ic_download_big" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ad_free_streaming"
                        android:textColor="#2A2D36"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_bl_sdk_ic_download_bsdfasdf" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/undsd"
                        android:textColor="#2A2D36"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_bl_sdk_ic_download_bsdfasdf" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/exclusive_original_podcast"
                        android:textColor="#2A2D36"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_bl_sdk_ic_download_asdfasdfasdfsdf" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/xfsdfsdf"
                        android:textColor="#2A2D36"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/your_contribution_will_enrich_our_music_industry"
        android:textColor="@color/my_sdk_down_item_desc"
        android:textSize="14sp" />


</LinearLayout>

